--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
             <version>4.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>gov.nist.math</groupId>
+            <artifactId>jama</artifactId>
+            <version>1.0.3</version>
+        </dependency>
+
+
     </dependencies>
 
 
